v1.10/reference/formatters/gemini/index.md
# Gemini CLI Formatter

| Property          | Value                                  |
| ----------------- | -------------------------------------- |
| **Tier**          | Custom                                 |
| **Main output**   | `GEMINI.md`                            |
| **Dot directory** | `.gemini/`                             |
| **Skills**        | Yes (`.gemini/skills/<name>/skill.md`) |
| **Agents**        | No                                     |
| **Commands**      | Yes (`.gemini/commands/<name>.toml`)   |
| **Local files**   | No                                     |

## Output Files

| File              | Path                             | Purpose                    |
| ----------------- | -------------------------------- | -------------------------- |
| Main instructions | `GEMINI.md`                      | Primary rule file          |
| Skills            | `.gemini/skills/<name>/skill.md` | Reusable skill definitions |
| Commands          | `.gemini/commands/<name>.toml`   | Slash commands             |

## Supported Features

| Feature                    | Supported |
| -------------------------- | --------- |
| Markdown Output            | Yes       |
| MDC Format                 | No        |
| Code Blocks                | Yes       |
| Mermaid Diagrams           | Yes       |
| Single File Output         | Yes       |
| Multiple Rule Files        | Yes       |
| Workflow Files             | No        |
| Nested Directory Structure | No        |
| YAML Frontmatter           | Yes       |
| Description in Frontmatter | Yes       |
| Globs in Frontmatter       | No        |
| Activation Type            | No        |
| Glob Pattern Targeting     | No        |
| Always Apply Rules         | Yes       |
| Manual Activation          | No        |
| Auto/Model Activation      | No        |
| Character Limit Validation | No        |
| Content Section Splitting  | Yes       |
| Context File Inclusion     | No        |
| @-Mentions                 | No        |
| Tool Integration           | No        |
| Path-Specific Rules        | No        |
| Prompt Files               | No        |
| Slash Commands             | Yes       |
| Skills                     | Yes       |
| Agent Instructions         | No        |
| Local Memory               | No        |
| Nested Memory              | No        |

## Limitations & Quirks

- Main file is `GEMINI.md` at project root
- Commands use TOML format (`.gemini/commands/<name>.toml`), not markdown
- Skills use lowercase `skill.md` (not `SKILL.md`) at `.gemini/skills/<name>/skill.md`
- Does not support agents
- Three output modes: `simple`, `multifile`, `full`

## Example Output

```text
project-root/
├── GEMINI.md                          # Main instructions
└── .gemini/
    ├── commands/
    │   └── review.toml                # Command (TOML format)
    └── skills/
        └── my-skill/
            └── skill.md               # Skill definition
```

## Official Documentation

- [Gemini CLI](https://github.com/google-gemini/gemini-cli)
